fixing tab spacing

--- a/vipr-portal/portal/public/stylesheets/workflowbuilder.less
+++ b/vipr-portal/portal/public/stylesheets/workflowbuilder.less
@@ -327,7 +327,10 @@
     left: 0;
 }
 
-
+.tab-close {
+    margin-right: 11px;
+    margin-left: 9px;
+}
 
 .button-step-close {
     margin: 5px;
@@ -586,4 +589,12 @@ table, th , td {
 
 .primitivesNav > li > a{
     padding: 10px 5px;
+}
+
+.panel-heading.input-panel {
+    padding-bottom: 0px;
+}
+
+.input-panel .nav-tabs {
+    border-bottom: 0px;
 }
